Move bash scripts into bsroot/.scripts; Add ./scripts/build-registry.bash

--- a/bsroot/registry.yml
+++ b/bsroot/registry.yml
@@ -6,7 +6,7 @@ storage:
   cache:
     blobdescriptor: inmemory
   filesystem:
-    rootdirectory: /bsroot/registry
+    rootdirectory: /bsroot/registry_data
 http:
   addr: :5000
   headers:
