--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -364,14 +364,6 @@ coreos:
               Requires=docker.socket early-docker.target flanneld.service
               [Service]
               Environment=DOCKER_OPTS="--insecure-registry={{ .Dockerdomain }}:5000"
-        - name: install-aci.service
-          command: start
-          content: |
-              [Service]
-              ExecStartPre=/bin/wget -O /etc/kubernetes/hyperkube:v1.2.4_coreos.1.aci http://{{ .BootstrapperIP }}:8081/static/hyperkube:v1.2.4_coreos.1.aci
-              ExecStart=/bin/rkt --insecure-options=all fetch file:////etc/kubernetes/hyperkube:v1.2.4_coreos.1.aci
-              RemainAfterExit=no
-              Type=oneshot
         {{- if .KubeMaster }}
         - name: kubelet.service
           runtime: true
@@ -380,12 +372,14 @@ coreos:
             [Unit]
             Description=Kubernetes Kubelet
             Documentation=https://github.com/kubernetes/kubernetes
-            Requires=install-aci.service docker.service
-            After=install-aci.service docker.service
+            Requires=docker.service
+            After=docker.service
             [Service]
             Environment=KUBELET_VERSION=v1.2.4_coreos.1
             EnvironmentFile=/etc/network-environment
-            ExecStart=/usr/lib/coreos/kubelet-wrapper \
+            ExecStartPre=/bin/wget -O /opt/bin/kubelet http://{{ .BootstrapperIP }}:8081/static/kubelet
+            ExecStartPre=/usr/bin/chmod +x /opt/bin/kubelet
+            ExecStart=/opt/bin/kubelet \
             --pod_infra_container_image={{ .Dockerdomain }}:5000/pause:2.0 \
             --register-node=true \
             --api-servers=http://{{ .MasterHostname }}:8080 \
@@ -410,12 +404,14 @@ coreos:
             [Unit]
             Description=Kubernetes Kubelet
             Documentation=https://github.com/kubernetes/kubernetes
-            After=install-aci.service docker.service
-            Requires=install-aci.service docker.service
+            After=docker.service
+            Requires=docker.service
             [Service]
             EnvironmentFile=/etc/network-environment
             Environment=KUBELET_VERSION=v1.2.4_coreos.1
-            ExecStart=/usr/lib/coreos/kubelet-wrapper \
+            ExecStartPre=/bin/wget -O /opt/bin/kubelet http://{{ .BootstrapperIP }}:8081/static/kubelet
+            ExecStartPre=/usr/bin/chmod +x /opt/bin/kubelet
+            ExecStart=/opt/bin/kubelet \
             --pod_infra_container_image={{ .Dockerdomain }}:5000/pause:2.0 \
             --address=0.0.0.0 \
             --allow-privileged=true \
