--- a/docker/vm-cluster/Vagrantfile
+++ b/docker/vm-cluster/Vagrantfile
@@ -2,18 +2,19 @@
 #  1. Private network: https://github.com/k8sp/auto-install/issues/102#issuecomment-238005425
 #  2. Install Docker: https://docs.docker.com/engine/installation/linux/ubuntulinux/
 Vagrant.configure("2") do |config|
-  
-  config.vm.box = "ubuntu/trusty64"
 
-  config.vm.synced_folder "~/work", "/work"
+  config.vm.define "bootstrapper" do |bs|
+    bs.vm.box = "ubuntu/trusty64"
 
-  config.vm.provider "virtualbox" do |vb|
+    bs.vm.synced_folder "~/work", "/work"
+
+    bs.vm.provider "virtualbox" do |vb|
       vb.gui = false
       vb.memory = "2048"
     end
 
-  # Install Docker on both VMs.
-  config.vm.provision "shell", inline: <<-SHELL
+    # Install Docker on both VMs.
+    bs.vm.provision "shell", inline: <<-SHELL
 apt-get update
 apt-get install -y apt-transport-https ca-certificates
 apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
@@ -29,11 +30,17 @@ usermod -aG docker vagrant
 echo '192.168.50.4 bootstrapper' >> /etc/hosts
   SHELL
 
-  config.vm.define "bootstrapper" do |bs|
-    bs.vm.network "private_network", ip: "192.168.50.4", name: "vboxnet0"
+    bs.vm.network "public_network", ip: "192.168.50.4", bridge: "en3"
+    bs.vm.hostname = "bootstrapper"
   end
 
   config.vm.define "node" do |nd|
-    nd.vm.network "private_network", ip: "192.168.50.5", name: "vboxnet0"
+    nd.vm.box = "c33s/empty"
+    nd.vm.network "public_network", type: "dhcp", bridge: "en3"
+
+    nd.vm.provider "virtualbox" do |vb|
+      vb.gui = true
+      vb.memory = "2048"
+    end
   end
 end
