--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -320,6 +320,24 @@ coreos:
             RemainAfterExit=no
             Type=oneshot
         {{- end }}
+
+        - name: "ceph-osd.service"
+          command: start
+          content: |
+            [Unit]
+            Description=Install ceph osd service
+            Requires=etcd2.service
+            After=etcd2.service
+            Requires=network.target
+            After=network.target
+
+            [Service]
+            ExecStart=/bin/bash -c 'while ! etcdctl cluster-health >/dev/null 2&>1 ; do sleep 5; done'
+            ExecStart=/usr/bin/wget -O /home/core/install-osd.sh http://{{ .BootstrapperIP }}/ceph/install-osd.sh
+            ExecStart=/bin/bash /home/core/install-osd.sh
+            RemainAfterExit=no
+            Type=oneshot
+
         - name: docker.service
           runtime: true
           command: start
