--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -314,9 +314,10 @@ coreos:
             After=network.target
 
             [Service]
+			ExecStartPre=docker pull {{ BootstrapperIP }}:5000/ceph/daemon
             ExecStart=/bin/bash -c 'while ! etcdctl cluster-health >/dev/null 2&>1 ; do sleep 5; done'
             ExecStart=/usr/bin/wget -O /home/core/install-mon.sh http://{{ .BootstrapperIP }}/static/ceph/install-mon.sh
-            ExecStart=/bin/bash /home/core/install-mon.sh
+            ExecStart=/bin/bash /home/core/install-mon.sh 
             RemainAfterExit=no
             Type=oneshot
         {{- end }}
@@ -332,6 +333,7 @@ coreos:
             After=network.target
 
             [Service]
+			ExecStartPre=docker pull {{ BootstrapperIP }}:5000/ceph/daemon
             ExecStart=/bin/bash -c 'while ! etcdctl cluster-health >/dev/null 2&>1 ; do sleep 5; done'
             ExecStart=/usr/bin/wget -O /home/core/install-osd.sh http://{{ .BootstrapperIP }}/static/ceph/install-osd.sh
             ExecStart=/bin/bash /home/core/install-osd.sh
