add k8s cluster dns var in cluster-desc.yaml

--- a/cloud-config-server/template/unisound-ailab/build_config.yml
+++ b/cloud-config-server/template/unisound-ailab/build_config.yml
@@ -8,6 +8,7 @@ broadcast: 10.10.10.255
 nameservers: [10.10.10.192, 8.8.8.8, 8.8.4.4]
 domainname: "ailab.unisound.com"
 dockerdomain: "bootstrapper"
+k8s_cluster_dns: 10.100.0.10
 
 nodes:
   - mac: "00:25:90:c0:f7:80"
