--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -356,7 +356,7 @@ coreos:
             --allow-privileged=true \
             --config=/etc/kubernetes/manifests \
             --hostname-override={{ .MasterHostname }} \
-            --cluster-dns=10.100.0.10 \
+            --cluster-dns={{ .K8sClusterDNS }} \
             --cluster-domain=cluster.local
             --logtostderr=true
             Restart=always
@@ -382,7 +382,7 @@ coreos:
             --pod_infra_container_image={{ .Dockerdomain }}:5000/pause:2.0 \
             --address=0.0.0.0 \
             --allow-privileged=true \
-            --cluster-dns=10.100.0.10 \
+            --cluster-dns={{ .K8sClusterDNS }} \
             --cluster-domain=cluster.local \
             --config=/etc/kubernetes/manifests \
             --hostname-override=${DEFAULT_IPV4} \
