--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -71,7 +71,7 @@ write_files:
               - --insecure-bind-address=0.0.0.0
               - --secure-port=443
               - --etcd-servers=http://{{ .MasterHostname }}:4001
-              - --service-cluster-ip-range=10.100.0.0/24
+              - --service-cluster-ip-range={{ .K8sServiceClusterIPRange }} 
               - --admission-control=NamespaceLifecycle,NamespaceExists,LimitRanger,SecurityContextDeny,ServiceAccount,ResourceQuota
               - --service-account-key-file=/etc/kubernetes/ssl/apiserver-key.pem
               - --tls-private-key-file=/etc/kubernetes/ssl/apiserver-key.pem
