--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -5,6 +5,11 @@ write_files:
     permissions: 0600
     content: |
       {{ .CaCrt }}
+ - path: /etc/docker/certs.d/{{ .Dockerdomain }}:5000/ca.crt
+    owner: root
+    permissions: 0600
+    content: |
+      {{ .CaCrt }}
   - path: /etc/hosts
     owner: root
     content: |
@@ -260,11 +265,6 @@ coreos:
         - name: "early-docker.service"
           command: "start"
           runtime: true
-          drop-ins:
-          - name: 40-docker-flannel.conf
-            content: |
-              [Service]
-              Environment=DOCKER_OPTS="--insecure-registry={{ .Dockerdomain }}:5000"
         - name: "flanneld.service"
           command: "start"
           drop-ins:
@@ -329,8 +329,6 @@ coreos:
               [Unit]
               After=docker.socket early-docker.target network.target flanneld.service
               Requires=docker.socket early-docker.target flanneld.service
-              [Service]
-              Environment=DOCKER_OPTS="--insecure-registry={{ .Dockerdomain }}:5000"
         {{- if .KubeMaster }}
         - name: kubelet.service
           runtime: true
