--- a/addons/template/ingress.template
+++ b/addons/template/ingress.template
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: nginx-ingress-controller
+  name: nginx-ingress-controller-v1
   labels:
     k8s-app: nginx-ingress-lb
+    version: v1
+    kubernetes.io/cluster-service: true
 spec:
   replicas: {{ .IngressReplicas }}
   selector:
