--- a/cloud-config-server/template/unisound-ailab/build_config.yml
+++ b/cloud-config-server/template/unisound-ailab/build_config.yml
@@ -10,6 +10,9 @@ domainname: "ailab.unisound.com"
 dockerdomain: "bootstrapper"
 k8s_service_cluster_ip_range: 10.100.0.0/24
 k8s_cluster_dns: 10.100.0.10
+hyperkube_version: "v1.3.6"
+pause_version: "3.0"
+flannel_version: "0.5.5"
 
 nodes:
   - mac: "00:25:90:c0:f7:80"
