--- a/vm-cluster/Vagrantfile
+++ b/vm-cluster/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant.configure("2") do |config|
     #创建内部网卡，便于和其他虚拟机通信
     bs.vm.network "private_network", ip: "192.168.8.101",virtualbox__intnet: true
     #将本地目录挂载到bootstrapper虚拟机
-    bs.vm.synced_folder "./../bsroot", "/bsroot", type: "rsync"
+    bs.vm.synced_folder "./../bsroot", "/bsroot", type: "nfs"
     #挂载的时候，需要依赖hostonly网卡
     bs.vm.network "private_network", type: "dhcp",:adapter=>3
     bs.vm.provision "shell", path: "provision_bootstrapper_vm.sh"
