--- a/addons/template/ingress.template
+++ b/addons/template/ingress.template
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: nginx-ingress-controller-v1
+  namespace: kube-system
   labels:
     k8s-app: nginx-ingress-lb
     version: v1
-    kubernetes.io/cluster-service: true
+    kubernetes.io/cluster-service: "true"
 spec:
   replicas: {{ .IngressReplicas }}
   selector:
