--- a/addons/template/ingress.template
+++ b/addons/template/ingress.template
@@ -19,7 +19,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: {{ .Dockerdomain }}:5000/nginx-ingress-controller:0.8.3
+      - image: {{ .Dockerdomain }}:5000/{{ .Images.ingress }}
         name: nginx-ingress-lb
         imagePullPolicy: Always
         livenessProbe:
