--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -415,7 +415,7 @@ coreos:
             --hostname-override={{ .MasterHostname }} \
             --cluster-dns={{ .K8sClusterDNS }} \
             --cluster-domain=cluster.local \
-            {{ if .Ingress }}
+            {{ if .IngressLabel }}
             --logtostderr=true \
             --node-labels=role=ingress
             {{ else }}
