--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -26,7 +26,7 @@ nodes:
     ceph_monitor: n
     kube_master: y
     etcd_member: y
-    ingress: n
+    ingress_label: n
 
 ssh_authorized_keys: |1+
     - "<SSH_KEY>"
