--- a/vm-cluster/Vagrantfile
+++ b/vm-cluster/Vagrantfile
@@ -17,10 +17,10 @@ Vagrant.configure("2") do |config|
     #创建内部网卡，便于和其他虚拟机通信
     bs.vm.network "private_network", ip: "192.168.8.101",virtualbox__intnet: true
     #将本地目录挂载到bootstrapper虚拟机
-   # bs.vm.synced_folder "./../bsroot", "/bsroot", type: "nfs", :mount_options => ['nolock,vers=3,udp']
+    bs.vm.synced_folder "./../bsroot", "/bsroot", type: "nfs", :mount_options => ['nolock,vers=3,udp']
     #挂载的时候，需要依赖hostonly网卡
     bs.vm.network "private_network", ip: "192.168.50.4", :adapter=>3
-   # bs.vm.provision "shell", path: "provision_bootstrapper_vm.sh"
+    bs.vm.provision "shell", path: "provision_bootstrapper_vm.sh"
    
     # plugin conflict
     if Vagrant.has_plugin?("vagrant-vbguest") then
@@ -63,7 +63,7 @@ Vagrant.configure("2") do |config|
          wk.functional_vboxsf     = false
          wk.customize ["modifyvm", :id, "--boot1", "disk", "--boot2", "net", "--macaddress1", "auto", "--usb", "off", "--usbehci", "off"]
          (1..2).each do |i|
-            file_to_disk = "./extra-disk-#{i}a.vdi"
+            file_to_disk = "./extra-disk-#{i}.vdi"
             unless File.exist?(file_to_disk)
               wk.customize ['createhd', '--filename', file_to_disk, '--size', '8196']
               wk.customize ['storageattach', :id, '--storagectl', 'IDE', '--port', i-1, '--device', 0, '--type', 'hdd', '--medium', file_to_disk]
