--- a/addons/template/dnsmasq.conf.template
+++ b/addons/template/dnsmasq.conf.template
@@ -3,21 +3,23 @@ user=root
 dhcp-range={{ .IPLow }},{{ .IPHigh }},{{ .Netmask }},12h
 log-dhcp
 
-dhcp-boot=pxelinux.0
 
+dhcp-option=28,{{ .Broadcast }}
 dhcp-option=3,{{range $index, $ele := .Routers}}{{if $index}},{{end}}{{$ele}}{{end}}
-
 dhcp-option=6,{{range $index, $ele := .NameServers}}{{if $index}},{{end}}{{$ele}}{{end}}
+
 no-hosts
 expand-hosts
 no-resolv
+server=8.8.8.8
+server=8.8.4.4
 
 local=/{{ .DomainName }}/
 domain-needed
 
-dhcp-option=28,{{ .Broadcast }}
 
 # FIXME: should add NTP time server
+dhcp-boot=pxelinux.0
 pxe-prompt="Press F8 for menu.", 5
 pxe-service=x86PC, "Install CoreOS from network server", pxelinux
 enable-tftp
