--- a/cloud-config-server/template/unisound-ailab/build_config.yml
+++ b/cloud-config-server/template/unisound-ailab/build_config.yml
@@ -5,7 +5,7 @@ iplow: 10.10.10.201
 iphigh: 10.10.10.220
 routers: [10.10.10.192]
 broadcast: 10.10.10.255
-nameservers: [10.10.10.192, 8.8.8.8, 8.8.4.4]
+nameservers: [10.10.10.192]
 domainname: "ailab.unisound.com"
 dockerdomain: "bootstrapper"
 k8s_service_cluster_ip_range: 10.100.0.0/24
