--- a/cloud-config-server/template/unisound-ailab/build_config.yml
+++ b/cloud-config-server/template/unisound-ailab/build_config.yml
@@ -11,6 +11,8 @@ domainname: "ailab.unisound.com"
 dockerdomain: "bootstrapper"
 k8s_service_cluster_ip_range: 10.100.0.0/24
 k8s_cluster_dns: 10.100.0.10
+zap_and_start_osd: y
+ceph_osd_journal_size: 100
 
 images:
   hyperkube: "typhoon1986/hyperkube-amd64:v1.3.6"
