--- a/vm-cluster/cluster-desc.yml.template
+++ b/vm-cluster/cluster-desc.yml.template
@@ -13,7 +13,7 @@ k8s_service_cluster_ip_range: 192.168.0.0/24
 k8s_cluster_dns: 192.168.0.10
 ceph:
   zap_and_start_osd: y
-  ceph_osd_journal_size: 100
+  osd_journal_size: 100
 
 images:
   hyperkube: "typhoon1986/hyperkube-amd64:v1.3.6"
